# cmw-coder-proxy

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  format.xml  library.cc  main.cc  proxy.c  proxy.cc  requirements.md  vcpkg.json
.github/workflows/: main.yml
cmake/: fetch_ced.cmake  fetch_jsoncpp.cmake  fetch_libreadtags.cmake  fetch_singleton.cmake  fetch_tree_sitter.cmake  fetch_wintoast.cmake
components/: CompletionManager.cc  CompletionManager.h  ConfigManager.cc  ConfigManager.h  Configurator.cc  Configurator.h  InteractionMonitor.cc  InteractionMonitor.h  MemoryManipulator.cc  MemoryManipulator.h  ModificationManager.cc  ModificationManager.h  ModuleProxy.cc  ModuleProxy.h  StatisticManager.cc  StatisticManager.h  SymbolManager.cc  SymbolManager.h  WebsocketManager.cc  WebsocketManager.h  WindowManager.cc  WindowManager.h
helpers/: HttpHelper.cc  HttpHelper.h  KeyHelper.cc  KeyHelper.h  WsHelper.cc  WsHelper.h
models/: MemoryAddress.h  MemoryPayloads.cc  MemoryPayloads.h  ReviewReference.h  SymbolInfo.h  WsMessage.cc  WsMessage.h  configs.cc  configs.h
types/: AddressToFunction.h  CaretDimension.h  CaretPosition.cc  CaretPosition.h  CodeIndentType.h  CompactString.cc  CompactString.h  Completion.cc  Completion.h  CompletionCache.cc  CompletionCache.h  CompletionComponents.cc  CompletionComponents.h  CompletionManager.cc  CompletionManager.h  Completions.cc  Completions.h  Configurator.cc  Configurator.h  ConstMap.h  CursorMonitor.cc  CursorMonitor.h  CursorPosition.h  EditedCompletion.cc  EditedCompletion.h  IndentType.h  Interaction.h  Key.h  MemoryAddress.h  Modification.cc  Modification.h  ModuleProxy.cc  ModuleProxy.h  Mouse.h  MultiGroupMutex.h  Range.cc  Range.cpp  Range.h  RegistryMonitor.cc  RegistryMonitor.h  (+17 more)
utils/: base64.cc  base64.h  common.cc  common.h  crypto.cc  crypto.h  fs.cc  fs.h  iconv.cc  iconv.h  inputbox.cc  inputbox.h  logger.cc  logger.h  memory.cc  memory.h  system.cc  system.h  window.cc  window.h
